--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 .App {
   text-align: center;
 }
+
+div.tooltip { 
+    position: absolute;     
+    padding: 10px;        
+    font: 12px sans-serif;    
+    background: lightsteelblue; 
+    border: 0px;    
+    border-radius: 8px;     
+    pointer-events: none;     
+}
